# gurgaon-real-estate-ml

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
app/: api.py  streamlit_app.py
app/analytics/: __init__.py  service.py
app/assets/: styles.css
app/components/: cards.py  charts.py  navbar.py  sidebar.py  tables.py
app/pages/: analytics.py  dashboard.py  prediction.py  recommendations.py
app/prediction/: __init__.py  service.py
app/recommender/: __init__.py  service.py
app/services/: __init__.py  analytics_service.py  api_client.py  prediction_service.py  recommendation_service.py
app/utils/: __init__.py
configs/: model_config.yaml
deployment/aws/: README.md
deployment/ci-cd/: README.md
deployment/docker/: Dockerfile  docker-compose.yml
models/: model_metadata.json  price_model.joblib
reports/metrics/: feature_importance.csv  model_metrics.json
requirements/: api.txt  base.txt  dev.txt  lock.txt
src/: __init__.py
src/analytics/: insights.py
src/config/: paths.py  settings.py
src/data/: io.py  preprocessing.py
src/features/: engineering.py  selection.py
src/models/: evaluate.py  train.py
src/pipelines/: __init__.py  inference.py
src/recommender/: __init__.py  engine.py
src/utils/: logging.py
src/visualization/: charts.py
tests/: test_api.py  test_features.py  test_inference_validation.py
