[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gurgaon-real-estate-ml"
version = "1.0.0"
description = "Production-grade ML system for Gurgaon real-estate price prediction, analytics, and recommendations."
requires-python = ">=3.10"

[tool.setuptools.packages.find]
include = ["src*", "app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["notebooks", "venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]
